<resources>
    <string name="login">Masuk</string>
    <string name="login_with_google">Masuk dengan Google</string>
    <string name="login_with_facebook">Masuk dengan Facebook</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="login_with_fingerprint">Masuk dengan Fingerprint</string>
    <string name="dont_have_account">Belum punya akun?   </string>
    <string name="sign_up">Daftar Sekarang</string>
    <string name="login_">Login</string>
    <string name="watchlist">Watchlist</string>
    <string name="stream">Stream</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="portofolio">Portofolio</string>
</resources>